kubernetes/apps/adguard/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: adguard
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
