kubernetes/apps/adguard/deployment-primary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-primary
  namespace: adguard
  labels:
    app: adguard-home
    role: primary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard-home
      role: primary
  template:
    metadata:
      labels:
        app: adguard-home
        role: primary
    spec:
      containers:
        - name: adguard
          image: adguard/adguardhome:latest
          ports:
            - containerPort: 53
              protocol: UDP
            - containerPort: 53
              protocol: TCP
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /opt/adguardhome/conf
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: adguard-primary-data
        - name: init-config
          configMap:
            name: adguard-init-config
            defaultMode: 0777 # Allow overwrite by app
