kubernetes/apps/adguard/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-primary
  namespace: adguard
spec:
  ports: 
  - name: http
    port: 80      
    targetPort: 80
  selector:
    app: adguard-home
    role: primary
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-replica
  namespace: adguard
spec:
  ports: 
  - name: http
    port: 80      
    targetPort: 80
  selector:
    app: adguard-home
    role: replica
