kubernetes/apps/adguard/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard-ui-route
  namespace: adguard
spec:
  parentRefs:
  - name: public-gateway
    namespace: kube-system
    kind: Gateway
  hostnames:
  - "adguard.home"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: adguard-primary
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard-replica-ui-route
  namespace: adguard
spec:
  parentRefs:
  - name: public-gateway
    namespace: kube-system
    kind: Gateway
  hostnames:
  - "adguard-replica.home"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: adguard-replica
      port: 80
